force-app/main/default/objects/integration__c/integration__c.object-meta.xml
<CustomObject>
    <description>Parameters for integration exctraction</description>
    <label>integration</label>
    <nameField>
        <label>integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>