force-app/main/default/objects/integration__c/fields/last_OK__c.field-meta.xml
<CustomField>
    <fullName>last_OK__c</fullName>
    <label>last OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>