force-app/main/default/objects/integration__c/fields/last_run_status__c.field-meta.xml
<CustomField>
    <fullName>last_run_status__c</fullName>
    <label>last run status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>