force-app/main/default/objects/integration__c/fields/table__c.field-meta.xml
<CustomField>
    <fullName>table__c</fullName>
    <label>table</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>